<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>Jobs</groupId>
	<artifactId>jobs</artifactId>
	<version>5.2.6.4</version>
	<name>Jobs</name>
	<url>http://maven.apache.org</url>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
        <!-- Spigot API -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.21.10-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.kyori</groupId>
			<artifactId>adventure-text-minimessage</artifactId>
			<version>4.17.0</version>
			<scope>provided</scope>
		</dependency>
        <!-- Mojang Authlib -->
		<dependency>
			<groupId>com.mojang</groupId>
			<artifactId>authlib</artifactId>
			<version>1.5.21</version>
			<scope>provided</scope>
		</dependency>
		<!-- McMMO -->
		<dependency>
			<groupId>com.gmail.nossr50.mcMMO</groupId>
			<artifactId>mcMMO</artifactId>
			<version>2.2.004</version>
			<exclusions>
				<exclusion>
					<artifactId>*</artifactId>
					<groupId>com.sk89q.worldguard</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Vault -->
		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>craftbukkit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- MythicMobs -->
		<dependency>
			<groupId>io.lumine</groupId>
			<artifactId>Mythic-Dist</artifactId>
			<version>5.6.1</version>
			<scope>provided</scope>
		</dependency>
		<!-- WorldGuard new version -->
		<dependency>
			<groupId>com.sk89q.worldguard</groupId>
			<artifactId>worldguard-bukkit</artifactId>
			<version>7.0.12</version>
			<exclusions>
				<exclusion>
					<artifactId>bukkit</artifactId>
					<groupId>org.bukkit</groupId>
				</exclusion>
				<exclusion>
					<artifactId>bukkit-classloader-check</artifactId>
					<groupId>org.sk89q.bukkit</groupId>
				</exclusion>
				<exclusion>
					<groupId>com.sk89q</groupId>
					<artifactId>commandbook</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bstats</groupId>
					<artifactId>bstats-bukkit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.papermc</groupId>
					<artifactId>paperlib</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- WorldEdit -->
		<dependency>
			<groupId>com.sk89q.worldedit</groupId>
			<artifactId>worldedit-bukkit</artifactId>
			<version>7.3.10</version>
			<exclusions>
				<exclusion>
					<artifactId>bukkit-classloader-check</artifactId>
					<groupId>org.sk89q.bukkit</groupId>
				</exclusion>
				<exclusion>
					<groupId>org.bstats</groupId>
					<artifactId>bstats-bukkit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.papermc</groupId>
					<artifactId>paperlib</artifactId>
				</exclusion>
				<exclusion>
					<groupId>
						com.sk89q.worldedit.worldedit-libs
					</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.java.truevfs</groupId>
					<artifactId>
						truevfs-profile-default_2.13
					</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-slf4j-impl</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- PlaceholderAPI -->
		<dependency>
			<groupId>com.github.placeholderapi</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.6</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>me.rayzr522</groupId>
					<artifactId>jsonmessage</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.jetbrains</groupId>
					<artifactId>annotations</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- CMILib -->
		<dependency>
			<groupId>com.github.Zrips</groupId>
			<artifactId>CMILib</artifactId>
			<version>1.5.6.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.bgsoftware</groupId>
			<artifactId>WildStackerAPI</artifactId>
			<version>3.8.0</version>
		</dependency>
		<!-- StackMob -->
		<dependency>
			<groupId>uk.antiperson.stackmob</groupId>
			<artifactId>StackMob</artifactId>
			<version>5.8.2</version>
		</dependency>
		<!-- MyPet -->
		<dependency>
			<groupId>de.keyle</groupId>
			<artifactId>mypet</artifactId>
			<version>3.11-SNAPSHOT</version>
			<scope>system</scope>
			<!--			 Temporary solution for replacing repository -->
			<systemPath>${basedir}/libs/mypet-3.12.jar</systemPath> 
		</dependency>
		<!-- PyroFishingPro -->
		<dependency>
			<groupId>me.arsmagica</groupId>
			<artifactId>pyrofishingpro</artifactId>
			<version>4.9.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/libs/PyroFishingPro-4.9.1.jar</systemPath>
		</dependency>
		<dependency>
            <groupId>net.momirealms</groupId>
            <artifactId>custom-fishing</artifactId>
            <version>2.3.4</version>
            <scope>provided</scope>
        </dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>momirealms</id>
			<url>https://repo.momirealms.net/releases/</url>
		</repository>
		<repository>
			<id>CodeMC</id>
			<url>https://repo.codemc.org/repository/maven-public/</url>
		</repository>
		<!-- MythicMobs -->
		<repository>
			<id>nexus</id>
			<name>Lumine Releases</name>
			<url>https://mvn.lumine.io/repository/maven-public/</url>
		</repository>
		<!-- WorldGuard & WorldEdit -->
		<repository>
			<id>sk89q-repo</id>
			<url>https://maven.enginehub.org/repo/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>neetgames</id>
			<url>https://nexus.neetgames.com/repository/maven-releases/</url>
		</repository>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<!-- PlaceholderAPI -->
		<repository>
			<id>placeholderapi</id>
			<url>
				https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>bg-repo</id>
			<url>https://repo.bg-software.com/repository/api/</url>
		</repository>
		<!-- MyPet -->
		<!--<repository> <id>mypet-repo</id> <url>https://repo.mypet-plugin.de/</url>
			</repositor> -->
	</repositories>
	<!-- Builds Plugin -->
	<build>
		<defaultGoal>clean package</defaultGoal>
		<finalName>Jobs${project.version}</finalName>
		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
		<resources>
			<resource>
				<targetPath>.</targetPath>
				<directory>${basedir}/src/main/resources/</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<!-- Make a Jar -->
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
				<configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>